  * Added a new image analysis module, lsl.imaging.analysis, that allows one to find point sources in a 2-D image
  * Added backward compatiability for older metadata tarball formats to the lsl.common.metabundle module (Ticket #61)
  * Added preliminary support for working with circular polarizations in the correlator (lsl.correlator.fx) and imaging (lsl.imaging.utils) modules

1.0.3
  * Fixed a bug in the inspectTarball.py script that caused it to crash on TBN/TBW metadata
  * Added fallbacks to lsl.misc.geodesy to use a backup EOP server if the primary is unreachable
  * Fixed a bug in imageIDI.py that caused it to crash if a FITS image is not saved
  * Added a new module, lsl.misc.rfutil, to help with understanding commercial antenna properties
  * Moved the calculateSEFD() function out of lsl.sim.vis and into lsl.misc.rfutil
  * Changed the meaning of the 'ForceGaussian' keyword in lsl.sim.vis.buildSimArray to contain the Gaussian full widths at half maximum in degrees
  * Added Boltzmann's constant to lsl.common.constants
  * Added a 'color' keyword to the various functions in lsl.imaging.overlay to change the color of the overlay
  * Added a 'marker' keyword to the lsl.imaging.overlay.source() to change symbol of the source overlay
  * Added a function to lsl.statistics.robust to help estimate the mode of a data set using the half-sample method
  * Fixed the __all__ declaration in the lsl.writer.sdfits module
  * Fixed a bug in the lsl.common.progress.ProgressBarPlus class that caused the time estimates not to get updated when using __iadd__
  * Fixed a bug in the splitSession.py script that caused it to die on truncated data files (Ticket #60)
  * Fixed a bug in imageIDI.py that assumed that 'xx' was always present in the data

1.0.2
  * Added documentation for LDP to the Sphinx build system
  * Added a call to close() for the data dictionary used in lsl.sim.vis.buildSimArray
  * Fixed a version number regression in lsl.correlator.fx