@@ -5,6 +5,7 @@
   * Added a new image analysis module, lsl.imaging.analysis, that allows one to find point sources in a 2-D image
   * Added backward compatiability for older metadata tarball formats to the lsl.common.metabundle module (Ticket #61)
   * Added preliminary support for working with circular polarizations in the correlator (lsl.correlator.fx) and imaging (lsl.imaging.utils) modules
+  * Added an option of imageIDI.py to overlay a topocentric graticle rather than a equatorial one
 
 1.0.3
   * Fixed a bug in the inspectTarball.py script that caused it to crash on TBN/TBW metadata
